[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.4",
    "fpdf>=1.7.2",
    "fpdf2>=2.8.2",
    "geopy>=2.4.1",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "phonenumbers>=8.13.55",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "streamlit>=1.42.2",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
]
